# sparse-conv-benchmarks

./: .gitignore  README.md  pyproject.toml
results/: minkowski.json  results.csv  spconv.json  summary.md  torchsparse.json  warpconvnet.json
results/h200/: minkowski.json  results.csv  spconv.json  summary.md  torchsparse.json  warpconvnet.json
scripts/: build_wcn_fix.sh  cuda_build_env.sh  rerun_wcn.sh  setup_env.sh  submit_ampere.sbatch
src/spconv_bench/: __init__.py  bench.py  cli.py  compare.py  data.py  report.py
src/spconv_bench/networks/: __init__.py  minkowski_net.py  spconv_net.py  spec.py  torchsparse_net.py  warpconvnet_net.py
